fix browse profile/traders modal on IE

--- a/frontend/scripts/react-components/shared/profile-selector/profile-selector.scss
+++ b/frontend/scripts/react-components/shared/profile-selector/profile-selector.scss
@@ -2,8 +2,6 @@
 
 .c-profile-selector {
   margin-top: 20px;
-  display: flex;
-  flex-direction: column;
   position: relative;
   width: 100%;
   height: 100%;
